It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Sat, Jun 20, 2009
---------------------------------------------------------------------
- Assets now show all related tasks, even if they were not created or assigned by current user.
- Release 0.9.2.

Fri, Jun 19, 2009
---------------------------------------------------------------------
- Revamping the way a list of tasks is shown on related asset page.
- Added [completed_by] field to Task model to be able to show who completed the task.

Thu, Jun 18, 2009
---------------------------------------------------------------------
- Fixed task creation issue on landing pages; added missing task stylesheets.
- Simplified version handling to avoid unnecessary database queries.
- Fixed Rails 2.3 incompatibility (expand/collapse in forms and [Cancel] for notes).
- Changed defaults to more reasonable values (thanks, Lana!).

Mon, Jun 15, 2009
---------------------------------------------------------------------
- Updated Readme file (added links to direct downloads and Google Groups).
- Installed [facebox-for-prototype] JavaScript library.
- Implemented About box showing version number and helpful links (rerun rake crm:setup!)

Sat, Jun 13, 2009
---------------------------------------------------------------------
- Upgraded to work with Rails 2.3.2
- Upgraded [rspec], [rspec-rails], and [open-id-authentication] plugins.
- Upgraded [acts-as-paranoid] plugin.
- Fixed task title naming issue.
- Fixed opportunity unique index issue (SQLite).
- Tagged 0.9.0 to build downloadable distributions on Github.

Thu, Jun 11, 2009
---------------------------------------------------------------------
- Finished user options for the Recent Activity (LH #46).
- Fixed sporadic spec failures when running with SQLite.

Wed, Jun 10, 2009
---------------------------------------------------------------------